# R-Type

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  build.bat  build.sh  build_actions_windows.bat  vcpkg.json  velocity.lua
.github/PULL_REQUEST_TEMPLATE/: general.md
.github/workflows/: build.yml  codeQuality.yml  commitNorm.yml  mirroring.yml  preCommit.yml  release.yml  tests.yml
client/: CMakeLists.txt
client/include/: Client.hpp  Config.hpp  PacketManager.hpp
client/src/: Client.cpp  Config.cpp  PacketManager.cpp  rtype.cpp
cmake/: Package.cmake
common/: RType.hpp
common/Graphics/: CircleShape.hpp  Color.hpp  Event.hpp  Font.hpp  IWindow.hpp  Joystick.hpp  Keyboard.hpp  Mouse.hpp  RectangleShape.hpp  Sound.hpp  SoundBuffer.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Utils.hpp  Window.hpp
common/Modules/: modules.hpp
common/Runtime/: AssetManager.hpp  IRuntime.hpp  LuaApi.hpp  NetworkHandler.hpp
common/Runtime/ECS/: ComponentArray.hpp  ComponentManager.hpp  Entity.hpp  EntityManager.hpp  IndexedZipper.hpp  (+5 more)
common/Utils/: Logger.hpp  Username.hpp  Uuid.hpp
common/Window/: IWindow.hpp  Window.hpp
demo-game/: project.json
doc/: ProjectArchitecture.excalidraw  rfc-42656.txt
docs/: Client.md  ProjectArchitecture.excalidraw  Server.md  rfc-42656.txt  server.md
editor/: CMakeLists.txt  README.md
editor/assets/: imgui.ini
editor/assets/templates/: copyrightNotice.txt  template.lua
editor/include/: Editor.hpp  IconsFontAwesome4.h  KeyMap.hpp
editor/src/: editor.cpp
editor/src/App/: App.cpp  App.hpp
editor/src/Layers/: AllLayers.hpp  ILayer.hpp
editor/src/Layers/AssetExplorer/: AssetExplorer.cpp  AssetExplorer.hpp
editor/src/Layers/CodeEditor/: CodeEditor.cpp  CodeEditor.hpp
editor/src/Layers/InitDialog/: InitDialog.cpp  InitDialog.hpp
editor/src/Layers/Inspector/: Inspector.cpp  Inspector.hpp
editor/src/Layers/ProjectSettings/: ProjectSettings.cpp  ProjectSettings.hpp
editor/src/Layers/SceneHierarchy/: SceneHierarchy.cpp  SceneHierarchy.hpp
editor/src/Layers/Viewport/: ShowUtils.cpp  ShowUtils.hpp  Viewport.cpp  Viewport.hpp
editor/src/ProjectManager/: ProjectManager.hpp
engine/: CMakeLists.txt
engine/src/: engine.cpp
include/: RType.hpp
include/Modules/: modules.hpp
include/Runtime/: IRuntime.hpp
network/: CMakeLists.txt  README.md
network/src/: IOContextHolder.hpp  NetworkException.hpp  Packet.cpp  Packet.hpp  PacketFactory.cpp  PacketFactory.hpp  UDP.cpp  UDP.hpp  UDPClient.cpp  UDPClient.hpp  UDPServer.cpp  UDPServer.hpp
network/src/packets/: Packet.cpp  Packet.hpp  PacketACK.cpp  PacketACK.hpp  PacketByeServer.cpp  PacketByeServer.hpp  PacketEntityCreate.cpp  PacketEntityCreate.hpp  PacketEntityDestroy.cpp  PacketEntityDestroy.hpp  PacketEntityDie.cpp  PacketEntityDie.hpp  PacketEntityHide.cpp  PacketEntityHit.hpp  PacketEntityMove.cpp  PacketEntityMove.hpp  PacketEntitySpawn.cpp  PacketEntitySpawn.hpp  PacketEntityhit.cpp  PacketFactory.cpp  PacketFactory.hpp  PacketHelloClient.cpp  PacketHelloClient.hpp  PacketHelloServer.cpp  PacketHelloServer.hpp  PacketImATeaPot.cpp  PacketKickClient.cpp  PacketKickClient.hpp  PacketPing.cpp  PacketPing.hpp  PacketPlayerDie.cpp  PacketPlayerDie.hpp  PacketPlayerHitEntity.cpp  PacketPlayerHitEntity.hpp  PacketPlayerLaunchBullet.cpp  PacketPlayerLaunchBullet.hpp  PacketPlayerSpawn.cpp  PacketPlayerSpawn.hpp
network/src/utils/: IOContextHolder.hpp  Logger.hpp
r-type-game/: project.json
r-type-networked-game/: project.json
runtime/: CMakeLists.txt  main.cpp  temp.txt  test.lua
runtime/src/: LuaApi.cpp  LuaApi.hpp  Runtime.cpp  Runtime.hpp
runtime/src/Graphics/SFML/: CircleShapeSFML.cpp  CircleShapeSFML.hpp  ColorSFML.cpp  ColorSFML.hpp  FontSFML.cpp  FontSFML.hpp  JoystickSFML.cpp  JoystickSFML.hpp  KeyBoardSFML.cpp  KeyBoardSFML.hpp  MouseSFML.cpp  MouseSFML.hpp  RectangleShapeSFML.cpp  RectangleShapeSFML.hpp  SoundBufferSFML.cpp  SoundBufferSFML.hpp  SoundSFML.cpp  SoundSFML.hpp  SpriteSFML.cpp  SpriteSFML.hpp  TextSFML.cpp  TextSFML.hpp  TextureSFML.cpp  TextureSFML.hpp  UtilsSFML.cpp  UtilsSFML.hpp  WindowSFML.cpp  WindowSFML.hpp
runtime/src/Network/: IOContextHolder.hpp  NetworkException.hpp  Packet.hpp  PacketFactory.cpp  PacketFactory.hpp  UDP.cpp  UDP.hpp  UDPClient.cpp  UDPClient.hpp
runtime/src/Network/Handler/: ClientNetworkHandler.cpp  ClientNetworkHandler.hpp  ServerNetworkHandler.cpp  ServerNetworkHandler.hpp
runtime/src/Network/Packets/: PacketACK.cpp  PacketACK.hpp  PacketByeServer.cpp  PacketByeServer.hpp  PacketChangeScene.cpp  PacketChangeScene.hpp  PacketClientInput.cpp  PacketClientInput.hpp  PacketControllableMove.cpp  PacketControllableMove.hpp  PacketEntityCreate.cpp  PacketEntityCreate.hpp  PacketEntityDestroy.cpp  PacketEntityDestroy.hpp  PacketEntityHide.hpp  PacketEntityHit.cpp  PacketEntityHit.hpp  PacketEntityMove.cpp  PacketEntityMove.hpp  PacketEntityShow.cpp  PacketEntityShow.hpp  PacketEntityUpdate.cpp  PacketEntityUpdate.hpp  PacketHelloClient.hpp  PacketHelloServer.cpp  PacketHelloServer.hpp  PacketImATeaPot.hpp  PacketKickClient.hpp  PacketPing.cpp  PacketPing.hpp  PacketPlayerHitEntity.hpp  PacketPlayerLaunchBullet.cpp  PacketPlayerLaunchBullet.hpp
runtime/src/Network/TCP/: TCP.cpp  TCP.hpp  TCPClient.cpp  TCPClient.hpp  TCPServer.cpp  TCPServer.hpp
runtime/src/Network/UDP/: UDP.cpp  UDP.hpp
runtime/src/Serializer/: Serializer.cpp  Serializer.hpp
runtime/src/Systems/: AnimationSystem.cpp  AnimationSystem.hpp  MoveableSystem.cpp  MoveableSystem.hpp  PhysicSystem.cpp  PhysicSystem.hpp
runtime/src/Utils/: CrashUtils.hpp  Random.hpp  TimeUtils.hpp
scripts/: install_dev_tools_actions.sh  install_dev_tools_fedora.sh  install_dev_tools_ubuntu.sh  install_dev_tools_windows.ps1
server/: CMakeLists.txt
server/include/: Config.hpp  EcsWrapper.hpp  NetworkManager.hpp  Server.hpp  Utils.hpp
server/src/: Config.cpp  EcsWrapper.cpp  NetworkManager.cpp  Server.cpp  main.cpp  server.cpp
server/tests/: CMakeLists.txt
server/tests/src/: basic.cpp
(+60 files in other folders)
